--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,18 @@ body {
   color: white;
   text-align: center;
 }
+
+.header{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-shadow: 2px 2px  black;
+  border:  4px solid  red;
+  border-radius: 4px;
+}
+
+.word {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.border{
+  border: dashed 4px red;
+  border-radius: 4px;
+}
