--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ body {
   background-color: #343456;
   color: white;
   text-align: center;
+  font-family: monospace;
 }
 
 .header{
@@ -15,8 +16,15 @@ body {
   border-radius: 4px;
 }
 
+td {
+  border-top: 1px solid;
+  border-color: #454571;
+}
+
 .word {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 800;
+  font-size: 16px;
 }
 .border{
   border: dashed 4px red;
